--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -61,7 +61,7 @@
 		{# ---  CHAT WIDGET (connectés uniquement)  --- #}
 		{% if app.user %}
 			<section class="global-chat mt-5">
-				<h3 class="text-center" style="font-family:'Orbitron',sans-serif;">Communications inter-vilains</h3>
+				<h3 class="text-center" style="font-family:'Orbitron',sans-serif;">Tu veux communiquer avec les autres sbires ? =></h3>
 				{{ include('chat_widget/chatwidget.html.twig', {
             channels:    channels,
             mercure_url: mercure_url,
