--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -137,8 +137,12 @@
     </footer>
     {% endblock %}
 
+
+    {# Route pour le Webpack}
     {# {% block javascripts %}
         {{ encore_entry_script_tags('app') }}
     {% endblock %} #}
+
+
 </body>
 </html>
